White Space Fix

--- a/public/main.css
+++ b/public/main.css
@@ -10,6 +10,8 @@
  */
 /**/
 /* Begin JS Bin CSS */
+*{margin:0;padding:0;}
+
 header, h2 {
   margin:auto;
   display: flex;
@@ -87,6 +89,7 @@ height: 120px;
   color: white;
   margin: auto;
   height: 100%;
+  margin: 0; padding: 0; 
  
 }
 table{
@@ -96,6 +99,7 @@ table{
   /* padding: 20px;  */
   width: 100%;
   /* height: 150px; */
+ 
 }
 
 tr, th, td{
@@ -107,6 +111,7 @@ tr, th, td{
   width: 20%;
 }
 footer{
+  margin-top: -24px;
   height: 400px;
   background-color: #ec5c09;
 
